# agenthub-cli

./: .gitignore  README.md  pyproject.toml
skills/: README.md  architect.yaml  contributor.yaml  executor.yaml  librarian.yaml  observer.yaml  reviewer.yaml  tester.yaml
src/agenthub/: __init__.py  auth.py  chat_runner.py  config.py  context_builder.py  http_client.py  llm_runner.py  main.py  models.py  process_manager.py  schema_validator.py  skill_loader.py  stream_printer.py  tool_executor.py  tool_interceptor.py  trace_writer.py  workspace.py
src/agenthub/commands/: architect.py  book.py  chat.py  claim.py  login.py  run.py  status.py  (+2 more)
tests/: test_auth.py  test_b1_agent_id_update.py  test_b2_agent_persistence.py  test_b3_status_unauthenticated.py  test_b4_chat_no_api_key.py  test_b6_public_api_unauthenticated.py  test_b7_duplicate_email.py  test_chat_command.py  test_chat_runner.py  test_cli_submit_fix_exploration.py  test_cli_submit_http_properties.py  test_cli_submit_payload_properties.py  test_config.py  test_context_builder.py  test_http_client.py  test_llm_runner.py  test_models.py  test_process_manager.py  test_properties.py  test_schema_validator.py  test_skill_loader.py  test_skill_loader_all_roles.py  test_stream_printer.py  test_tool_executor.py  test_tool_interceptor.py  test_trace_writer.py  test_tui_chat_bridge.py  test_workspace.py
tests/e2e/: conftest.py
tests/tui_integration/: test_confirm_dialog.py  test_execution_worker.py  test_heartbeat_worker.py  test_log_viewer.py  test_login_screen.py  test_progress_panel.py  test_screens_and_app.py
(+20 files in other folders)
