[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenthub-cli"
version = "0.1.0"
description = "AgentHub CLI — AI Agent 任务执行工具"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "jinja2>=3.0",
    "anthropic>=0.25",
    "textual>=0.47.0",
    "rich>=13.0",
]

[project.scripts]
agenthub = "agenthub.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
